force-app/main/default/objects/LLC_BI__Product_Change_Detail__c/LLC_BI__Product_Change_Detail__c.object-meta.xml
<CustomObject>
    <description>The Product Change Detail references Product Packages and their related financial products and can be used for keeping track of changes in products.</description>
    <label>Product Change Detail</label>
    <nameField>
        <displayFormat>PCD-{000000000}</displayFormat>
        <label>Product Change Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Change Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>