force-app/main/default/objects/LLC_BI__Product_Change_Detail__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>Category__c is the business category of the Product Package referenced in the Product Change Detail Object.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treasury Maintenance</fullName>
                <default>true</default>
                <label>Treasury Maintenance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>