force-app/main/default/objects/LLC_BI__Product_Change_Detail__c/fields/LLC_BI__Change_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Change_Status__c</fullName>
    <description>Change_Status__c represents the status of the change detail, and is set by the system based on the workflow.</description>
    <label>Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>