force-app/main/default/objects/LLC_BI__Product_Change_Detail__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product_Package__c contains the details of the related products and services.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Product Change Details</relationshipLabel>
    <relationshipName>Product_Change_Details</relationshipName>
    <type>Lookup</type>
</CustomField>