force-app/main/default/objects/LLC_BI__Product_Change_Detail__c/fields/LLC_BI__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Treasury_Service__c is a lookup field for each Treasury Service related to this Change Detail Object.</description>
    <label>Treasury Service</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Product Change Details</relationshipLabel>
    <relationshipName>Product_Change_Details</relationshipName>
    <type>Lookup</type>
</CustomField>